--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,57 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    # TODO
-  db:
-# TODO
+    container_name: php-fpm
+    environment:
+      POSTGRES_HOST: ${DB_HOST}
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
+    volumes:
+      - .:/var/www/html
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-server
+    ports:
+      - "8080:80"
+    volumes:
+      - .:/var/www/html
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - php
+    networks:
+      - app-network
+
+  postgres:
+      image: postgres:18-alpine
+      container_name: postgres-db
+      environment:
+        POSTGRES_DB: ${DB_NAME}
+        POSTGRES_USER: ${DB_USER}
+        POSTGRES_PASSWORD: ${DB_PASS}
+      volumes:
+        - db-data:/var/lib/postgresql/data
+        - ./database/db_schema.sql:/docker-entrypoint-initdb.d/01-init.sql
+      ports:
+        - "5432:5432"
+      networks:
+        - app-network
+      
+      healthcheck:
+        test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+
+networks:
+  app-network:
+    driver: bridge
+
+volumes:
+  db-data:
