--- a/default.conf
+++ b/default.conf
@@ -8,6 +8,8 @@ server {
     root /var/www/html/public;
     index index.php;
 
+    client_max_body_size 8M;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
