--- a/default.conf
+++ b/default.conf
@@ -1,3 +1,11 @@
+upstream php_backend {
+    server php:9000;
+}
+
+upstream node_backend {
+    server node:3000;
+}
+
 server {
     listen 80;
     server_name localhost;
@@ -5,9 +13,59 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
+    absolute_redirect off;
+
+    # Global Root (PHP Legacy)
     root /var/www/html/public;
     index index.php;
 
+    # NODE.JS API & WEBSOCKETS
+    location /api/node/ {
+        rewrite ^/api/node/(.*) /$1 break;
+        proxy_pass http://node_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /socket.io/ {
+        proxy_pass http://node_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+    }
+
+    # REACT SPA ROUTING
+    location /chat {
+        alias /var/www/react;
+        try_files $uri $uri/index.html @react_fallback;
+    }
+
+    location /auction {
+        alias /var/www/react;
+        try_files $uri $uri/index.html @react_fallback;
+    }
+
+    location /admin {
+        alias /var/www/react;
+        try_files $uri $uri/index.html @react_fallback;
+    }
+
+    # The Named Location for SPA Fallback
+    location @react_fallback {
+        root /var/www/react;
+        try_files $uri $uri/ /index.html;
+    }
+
+    # React Static Assets (Vite builds to /assets)
+    location /assets/ {
+        alias /var/www/react/assets/;
+        access_log off;
+        expires max;
+    }
+
+    # PHP LEGACY ROUTING
     client_max_body_size 8M;
 
     location / {
@@ -16,8 +74,9 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass php-fpm:9000;
+        fastcgi_pass php_backend; 
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
     location ~ /\. {
