--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   php:
     build:
-      context: .
+      context: ./php
       dockerfile: Dockerfile
     container_name: php-fpm
     environment:
@@ -10,7 +10,26 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASS}
     volumes:
-      - .:/var/www/html
+      - ./php:/var/www/html
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - app-network
+  
+  node:
+    build: ./node
+    container_name: nimon_node
+    environment:
+      PORT: 3000
+      DB_HOST: ${DB_HOST}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASS: ${DB_PASS}
+      JWT_SECRET: ${JWT_SECRET}
+    volumes:
+      - ./node:/usr/src/app
+      - /usr/src/app/node_modules
     depends_on:
       postgres:
         condition: service_healthy
@@ -23,10 +42,12 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - .:/var/www/html
+      - ./php/public:/var/www/html/public 
+      - ./react/dist:/var/www/react
       - ./default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
+      - node
     networks:
       - app-network
 
@@ -40,6 +61,7 @@ services:
       volumes:
         - db-data:/var/lib/postgresql/data
         - ./database/db_schema.sql:/docker-entrypoint-initdb.d/01-init.sql
+        - ./database/seed_products.sql:/docker-entrypoint-initdb.d/02-seed-products.sql
       ports:
         - "5432:5432"
       networks:
