chore: setup react

--- a/default.conf
+++ b/default.conf
@@ -44,18 +44,20 @@ server {
 
     location /auction {
         alias /var/www/react;
-        try_files $uri $uri/index.html @react_fallback;
+        index index.html;
+        try_files $uri $uri/ /index.html @react_fallback;
     }
 
     location /admin {
         alias /var/www/react;
-        try_files $uri $uri/index.html @react_fallback;
+        index index.html;
+        try_files $uri $uri/ /index.html @react_fallback;
     }
 
-    # The Named Location for SPA Fallback
+    # Fallback for React refreshing
     location @react_fallback {
         root /var/www/react;
-        try_files $uri $uri/ /index.html;
+        try_files /index.html =404;
     }
 
     # React Static Assets (Vite builds to /assets)
