--- a/node/package.json
+++ b/node/package.json
@@ -7,12 +7,14 @@
   "type": "commonjs",
   "main": "src/server.js",
   "scripts": {
-      "start": "node dist/server.js",
-      "build": "tsc",
-      "dev": "nodemon src/server.ts" 
-    },
+    "start": "node dist/server.js",
+    "build": "tsc",
+    "dev": "nodemon src/server.ts"
+  },
   "dependencies": {
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "cookie": "^1.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie": "^0.6.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
