--- a/node/package.json
+++ b/node/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^6.0.0",
     "cookie": "^1.1.1",
     "cors": "^2.8.5",
+    "dompurify": "^3.3.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
@@ -27,6 +28,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cookie": "^0.6.0",
     "@types/cors": "^2.8.19",
+    "@types/dompurify": "^3.0.5",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
