--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DB_NAME=nimonspedia_db
 DB_USER=nimon_user
 DB_PASS=nimons_password
 JWT_SECRET=anggrek_mekar_pontianak
+VAPID_PUBLIC_KEY="PUBLIC_KEY"
+VAPID_PRIVATE_KEY="PRIVATE_KEY"
+VAPID_SUBJECT="http://localhost:8080"
