chore: add new env variable in .env.example

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ JWT_SECRET=anggrek_mekar_pontianak
 VAPID_PUBLIC_KEY="PUBLIC_KEY"
 VAPID_PRIVATE_KEY="PRIVATE_KEY"
 VAPID_SUBJECT="http://localhost:8080"
+INTERNAL_API_KEY="handoko_paus_orca"
