--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       VAPID_PUBLIC_KEY: ${VAPID_PUBLIC_KEY}
       VAPID_PRIVATE_KEY: ${VAPID_PRIVATE_KEY}
       VAPID_SUBJECT: ${VAPID_SUBJECT}
+      INTERNAL_API_KEY: ${INTERNAL_API_KEY}
     volumes:
       - ./node:/usr/src/app
       - /usr/src/app/node_modules
