--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ VAPID_PUBLIC_KEY="PUBLIC_KEY"
 VAPID_PRIVATE_KEY="PRIVATE_KEY"
 VAPID_SUBJECT="http://localhost:8080"
 INTERNAL_API_KEY="handoko_paus_orca"
+NOTIFICATION_TRIGGER_URL="http://localhost:8080/link-ke-api"
