--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     volumes:
       - ./node:/usr/src/app
       - /usr/src/app/node_modules
+      - ./php/public/uploads:/usr/php/public/uploads
     depends_on:
       postgres:
         condition: service_healthy
