feat: integrate checkout flags

--- a/default.conf
+++ b/default.conf
@@ -54,6 +54,12 @@ server {
         try_files $uri $uri/ /index.html @react_fallback;
     }
 
+    location /feature-disabled {
+        alias /var/www/react;
+        index index.html;
+        try_files $uri $uri/ /index.html @react_fallback;
+    }
+
     # Fallback for React refreshing
     location @react_fallback {
         root /var/www/react;
